fhstyle.css
body,
html {
    width: 100%;
    max-width: 100%;
}

body {
    padding-right: 0px;
    padding-left: 0px;
    font-size: 1em;
    padding-bottom: 0px;
    margin: 0px;
    color: #000000;
    padding-top: 0px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #ffefd9;
}

.fhcontent {
    padding-left: 1em;
    padding-right: 1em;
}

#menubar {
    padding: 0.25em;
    background-color: #ff7939;
    margin-bottom: 1.5em;
    font-weight: bold;
    overflow: hidden;
}

#menubar ul {
    list-style: none;
    padding: 0;
    margin: 0.25em;
    line-height: 0em;
}

#menubar li {
    display: inline;
    margin: 0;
    margin-right: 0.8em;
}

#menubar a {
    text-decoration: none;
    font-size: 0.8em;
    font-variant: small-caps;
    color: #0000ff;
    line-height: 1.5em;
    letter-spacing: 1px;
}

#menubar a:hover {
    text-decoration: underline;
}

a {
    text-decoration: none;
}

a:hover {
    opacity: 0.8;
}

p {
    line-height: 1.2;
    margin-block-start: 0em;
    margin-block-end: 0em;
    word-break: break-word;
    overflow-wrap: break-word;
    hyphens: auto;
}

.fhzonexr107 p {
    margin-block-end: 0.5em;
}

.fhimgwrap p {
    font-size: small;
    font-weight: 550;
    line-height: 1;
}

.FhWelcome {
    margin-bottom: 1em;
}

#header {
    height: 136px;
    display: flex;
    align-items: center;
    overflow: hidden;
}

#header img {
    margin-right: 0.5em;
    height: 100%;
}

#header h1 {
    font-size: 1.5em;
    font-weight: normal;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 0.25em;
    color: #004080;
}

.fhcontent h1,
h2,
h3,
h4,
h5,
h6 {
    clear: both;
    height: auto;
    font-size: 22pt;
    font-weight: 700;
    border-style: solid;
    border-top-width: 1pt;
    border-right-width: 0px;
    border-bottom-width: 1pt;
    border-left-width: 0px;
    margin-top: 2em;
    margin-bottom: 1em;
    font-family: "Trebuchet MS";
    color: #000000;
    padding-top: 0.125em;
    padding-bottom: 0.125em;
}

.FhSiteTitle {
    font-size: xx-large;
    font-weight: bold;
    text-align: center;
    margin-bottom: 1em;
}

.FhSeeAlso {
    margin-bottom: 2em;
}

.fhimgwrap {
    margin-bottom: 2em;
}

.fhimgdimc640 img {
    margin: 0;
    margin-bottom: 0.5em;
}

img {
    max-width: 100%;
}

.fhimgwrap {
    text-align: center;
    margin-bottom: 1em;
}
.fhimgwrap img {
    border: 1px black solid;
}
.fhimgleft {
    overflow: auto;
    width: 100%;
}
.fhimgleft div {
    float: left;
    padding-right: 1em;
    clear: left;
}
.fhimgright {
    overflow: auto;
    width: 100%;
}
.fhimgright div {
    float: right;
    padding-left: 1em;
    clear: right;
}
.fhimgrow {
    width: 100%;
    vertical-align: middle;
}
.fhimgrow div {
    display: inline-block;
    padding-left: 1em;
    vertical-align: top;
}
.fhimgrow p {
    min-height: 4em;
}
.fhimgcentre div img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.fhimgcentre div {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.fhimgcentre p {
    text-align: center;
}
.fhimgdims {
    height: auto;
    width: 96px;
    min-height: 150px;
}
.fhimgdimm {
    height: auto;
    width: 192px;
    min-height: 200px;
}
.fhimgdiml {
    height: auto;
    width: 288px;
    min-height: 350px;
}

@media screen and (min-width: 480px) /* if layout is desktop */ {
    .fhresponsive ul.table-border li {
        border: thin solid black;
    }
    .fhresponsive ul.fhTable {
        display: grid;
        grid-template-columns: 20% 80%;
        grid-gap: 1px;
        list-style-type: none;
    }
    .fhimgcolumn {
        float: right !important;
        flex-direction: column !important;
        align-items: start !important;
        flex-wrap: nowrap !important;
        gap: 0 !important;
        clear: right;
    }
    #header h1 {
        font-size: 2em;
    }
}

.fhimgcolumn {
    float: none;
    display: flex;
    flex-direction: row;
    gap: 1em;
    justify-content: center;
    flex-wrap: wrap;
    margin-left: 1em;
}

a {
    color: #0000a0;
}

.fhstdtable {
    min-width: 15em;
}

.b {
    font-weight: bold;
}
.i {
    font-style: italic;
}
.u {
    text-decoration: underline;
}
.s {
    text-decoration: line-through;
}

.FhPageTitleCentred {
    text-align: center;
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: 1em;
}

.FhIndexPage {
    text-align: center;
    font-weight: bold;
    text-decoration: none;
    color: #e9e9e9;
    margin-bottom: 1em;
}
.FhIndexPage a {
    color: #808080;
    text-decoration: none;
}
.FhIndexPage a:hover {
    color: black;
    text-decoration: none;
}
.FhIndexList {
    margin-bottom: 2em;
}
.FhIndexList p {
    padding: 0px;
    margin: 0px;
}
.FhIndexList ul {
    list-style: none;
    text-align: left;
}
.FhIndexList a {
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    text-decoration: none;
}

